# tip-management-system

./: README.md
coverage/BackupServiceTest/: index.html
coverage/BackupServiceTest/Modules/: BackupServiceTest.html
coverage/BackupServiceTest/Modules/BackupServiceTest/: BackupService.cpp.html  BackupServiceTest.cpp.html  BackupServiceTest.moc.html
coverage/DatabaseServiceTest/: index.html
coverage/DatabaseServiceTest/Modules/: DatabaseServiceTest.html
coverage/DatabaseServiceTest/Modules/DatabaseServiceTest/: DatabaseService.cpp.html  DatabaseServiceTest.cpp.html  DatabaseServiceTest.moc.html
coverage/SqlTipMetricsRepositoryTest/: index.html
coverage/SqlTipMetricsRepositoryTest/Modules/: SqlTipMetricsRepositoryTest.html
coverage/SqlTipMetricsRepositoryTest/Modules/SqlTipMetricsRepositoryTest/: ITipMetricsRepository.h.html  SqlTipMetricsRepository.cpp.html  SqlTipMetricsRepositoryTest.cpp.html  SqlTipMetricsRepositoryTest.moc.html
coverage/TipManagerTest/: index.html
coverage/TipManagerTest/Modules/: TipManagerTest.html
coverage/TipManagerTest/Modules/TipManagerTest/: TipManager.cpp.html  TipManagerTest.cpp.html  TipManagerTest.moc.html
coverage/UserManagerTest/: index.html
coverage/UserManagerTest/Modules/: UserManagerTest.html
coverage/UserManagerTest/Modules/UserManagerTest/: UserManager.cpp.html  UserManagerTest.cpp.html  UserManagerTest.moc.html
coverage/_deploy_tests/BackupServiceTest/: deploy_test.bat  run_coverage.bat  test_database.db
coverage/_deploy_tests/DatabaseServiceTest/: deploy_test_1.bat  persistent.db  run_coverage.bat
coverage/_deploy_tests/SqlTipMetricsRepositoryTest/: deploy_test.bat  run_coverage.bat
coverage/_deploy_tests/TipManagerTest/: deploy_test.bat  run_coverage.bat
coverage/_deploy_tests/UserManagerTest/: deploy_test.bat  run_coverage.bat
project/: BackupService.cpp  BackupService.h  BalanceCalculator.cpp  BalanceCalculator.h  CMakeLists.txt  CMakeLists.txt.user.d7d9048.xml  CMakeLists.txt.user.e64f58e.xml  DatabaseService.cpp  DatabaseService.h  ITipMetricsRepository.h  PerformanceService.cpp  PerformanceService.h  ReportGenerator.cpp  ReportGenerator.h  SqlTipMetricsRepository.cpp  SqlTipMetricsRepository.h  TipManager.cpp  TipManager.h  UserManager.cpp  UserManager.h  UserRepository.cpp  UserRepository.h  addtipdialog.cpp  addtipdialog.h  addtipdialog.ui  balancedialog.cpp  balancedialog.h  balancedialog.ui  editlasttipdialog.cpp  editlasttipdialog.h  editlasttipdialog.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metricsdialog.cpp  metricsdialog.h  (+5 more)
project/tests/: BackupServiceTest.cpp  BalanceCalculatorTest.cpp  DatabaseServiceTest.cpp  PerformanceServiceTest.cpp  ReportGeneratorTest.cpp  SqlTipMetricsRepositoryTest.cpp  TipManagerTest.cpp  UserManagerTest.cpp  UserRepositoryTest.cpp
